nested/subnested1/apigeeEdge-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "West US",
            "allowedValues": [
                "Brazil South",
                "East Asia",
                "East US",
                "Japan East",
                "Japan West",
                "North Central US",
                "North Europe",
                "South Central US",
                "West Europe",
                "West US",
                "Southeast Asia",
                "Central US",
                "East US 2"
            ],
            "metadata": {
                "description": "Deployments Location"
            }
        },
        "networkApiVersion": {
            "type": "string",
            "defaultValue": "2016-03-30",
            "allowedValues": [
                "2015-05-01-preview",
                "2015-06-15",
                "2016-03-30"
            ],
            "metadata": {
                "description": "API Version for the Network Resources"
            }
        },
        "tag": {
            "type": "object",
            "defaultValue": {
                "key1": "key",
                "value1": "value"
            }
        },
        "networkSecurityGroupsName": {
            "type": "string",
            "defaultValue": "wowza-nsg",
            "metadata": {
                "description": " Virtual machine name"
            }
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroupsName')]",
            "apiVersion": "[parameters('networkApiVersion')]",
            "location": "[parameters('location')]",
            "tags": {
                "[parameters('tag').key1]": "[parameters('tag').value1]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "default-org-prod",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9001",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-org-test",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9002",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "management-ui",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9000",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "management-api",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-http-port",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SSH-port",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 106,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ]
}
